# poligrapher-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  setup.sh
.github/workflows/: build-azure-image.yml  deploy-cloud-run.yml  deploy-hf-space.yml
alembic/: env.py
alembic/versions/: 20260710_01_durable_results.py  20260710_02_company_collections.py  20260711_03_durable_tasks.py  20260714_04_task_output.py  20260715_05_task_run_links.py  20260715_06_rerun_provenance.py
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOY_AZURE.md  DEPLOY_CLOUD_RUN.md  DEPLOY_HF_SPACES.md  SCHEDULED_ACQUISITION.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AssessmentsPanel.tsx  AttributionModal.tsx  CompanyLogo.tsx  DetailPane.tsx  GraphViewer.tsx  Modal.tsx  OverflowMenu.tsx  PolicyList.tsx  ProviderSidebar.tsx  SelectMenu.tsx  StatsPanel.tsx  StatusCenter.tsx  TaskOutputPanel.tsx  Tooltip.tsx  TopBar.tsx
frontend/src/components/modals/: AddPolicyModal.tsx  AddProviderModal.tsx  CollectionsModal.tsx  ImportCsvModal.tsx  ScheduleModal.tsx
frontend/src/hooks/: queries.ts  usePolicyTasks.ts  useRuns.ts  useSchedules.ts  useTaskRunner.ts  useTasks.ts
infra/: budget.bicep  main.bicep
poligrapher_app/: README.md  __main__.py  api_routes.py  app.py  app_sample.py  database.py  functions.py  grades.py  localstoragedb.py  migrate_artifacts.py  migrate_cloud.py  migrate_csv.py  policy_analysis.py  policy_list.csv  poligrapher_functions.py  run_due_schedules.py  validators.py  worker.py
poligrapher_app/analysis/: __init__.py  gdpr_scorer.py  privacy_scorer.py
poligrapher_app/analysis/config/: gdpr_scoring_rules.toml
poligrapher_app/analysis/criteria/: gdpr_scoring_criteria.toml
poligrapher_app/api/: database.py  deps.py  main.py  mapping.py  models.py  schemas.py  utils.py
poligrapher_app/api/routers/: analysis.py  collections.py  policies.py  providers.py  runs.py  schedules.py
poligrapher_app/domain/: policy_analysis.py
poligrapher_app/scoring/: __init__.py  privacy_scorer.py
poligrapher_app/scoring/config/: scoring_rules.toml
poligrapher_app/scoring/criteria/: scoring_criteria.toml
poligrapher_app/services/: acquisition.py  company_catalog.py  graph.py  importer.py  persistence.py  pipeline.py  runs.py  scheduler.py  scoring.py  source_verification.py  sp500_catalog.py  storage.py  task_execution.py  task_output.py  tasks.py
tests/: test_company_catalog.py  test_persistence_models.py  test_proxy_routing.py  test_reruns.py  test_runtime_split.py  test_sp500_catalog.py  test_storage.py
