[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poligrapher-app"
version = "0.2.0"
description = "Privacy policy analysis app (React SPA + FastAPI JSON API)"
requires-python = ">=3.11"
authors = [
    { name = "Luke Blevins" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "azure-storage-blob>=12.24",
    "azure-storage-queue>=12.12",
    "python-multipart",
    "python-dotenv",
    "beautifulsoup4==4.13.4",
    "httpx==0.24.1",
    "requests==2.32.4",
    "tldextract",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
analysis = [
    "poligrapher @ git+https://github.com/lukeblevins/PoliGraph.git@4b327b810983b9af33f74b133c5ec4578f48c123",
    "policy-scorer[readability] @ git+https://github.com/lukeblevins/policy-scorer.git",
    "huggingface-hub==0.24.0",
    "pandas==3.0.3",
    "networkx==3.5",
    "pymupdf4llm==0.0.27",
    "playwright==1.45.0",
    "pyyaml==6.0.3",
    "toml==0.10.2",
    "pillow==12.2.0",
    "markdown==3.8.2",
    "textstat",
    "lxml==6.1.0",
    "scikit-learn==1.8.0",
    "spacy==3.8.13",
    "spacy-transformers==1.4.0",
    "sentence-transformers==5.5.0",
    "anytree==2.13.0",
    "langdetect==1.0.9",
    "unidecode==1.3.6",
    "regex==2026.5.9",
    "setfit==0.7.0",
    "requests-cache==0.9.8",
    "torch",
]
test = ["pytest>=8", "pytest-cov>=5"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["poligrapher_app"]
